fixed csrf, added more tests, added more exception handling, edited transaction service a little