@@ -1,5 +1,7 @@
 package com.app.banking.services;
 
+import com.app.banking.dto.TransferRequest;
+import com.app.banking.exceptions.AccountNotActiveException;
 import com.app.banking.exceptions.AccountNotFoundException;
 import com.app.banking.exceptions.InsufficientFundsException;
 import com.app.banking.exceptions.InvalidTransferException;
@@ -11,9 +13,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
-import java.nio.channels.AcceptPendingException;
-import java.util.Arrays;
-import java.util.Optional;
+import java.util.List;
 import java.util.UUID;
 
 @Service
@@ -27,14 +27,19 @@ public class TransactionService {
     }
 
     @Transactional
-    public void transfer(String fromAccountNumber, String toAccountNumber, BigDecimal amount) {
-        if(amount.compareTo(BigDecimal.valueOf(0)) <= 0) throw new InvalidTransferException("Amount cannot be less than or equal to zero!");
+    public void transfer(TransferRequest transaction) {
+        BigDecimal amount = transaction.amount();
+        String fromAccountNumber = transaction.fromAccountNumber();
+        String toAccountNumber = transaction.toAccountNumber();
+
+
+        if(amount.compareTo(BigDecimal.ZERO) <= 0) throw new InvalidTransferException("Amount cannot be less than or equal to zero!");
         if(fromAccountNumber.equals(toAccountNumber)) throw new InvalidTransferException("Cannot transfer to the same account!");
         Account from = accountRepo.findById(fromAccountNumber).orElseThrow(() -> new AccountNotFoundException(fromAccountNumber));
         Account to = accountRepo.findById(toAccountNumber).orElseThrow( () -> new AccountNotFoundException(toAccountNumber));
 
-        if(from.isActive() == false) throw new AccountNotFoundException(fromAccountNumber);
-        if(to.isActive() == false) throw new AccountNotFoundException(toAccountNumber);
+        if(from.isActive() == false) throw new AccountNotActiveException(fromAccountNumber);
+        if(to.isActive() == false) throw new AccountNotActiveException(toAccountNumber);
 
         if(from.getBalance().compareTo(amount) < 0) {
             throw new InsufficientFundsException();
@@ -50,6 +55,6 @@ public class TransactionService {
         UUID transactionID = UUID.randomUUID();
         Transaction fromTransaction = new Transaction(transactionID, fromAccountNumber, toAccountNumber, amount.negate(), TransactionType.TRANSFER);
         Transaction toTransaction = new Transaction(transactionID, fromAccountNumber, toAccountNumber, amount, TransactionType.TRANSFER);
-        tranRepo.saveAll(Arrays.asList(fromTransaction, toTransaction));
+        tranRepo.saveAll(List.of(fromTransaction, toTransaction));
     }
 }
